# aegis-bot

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  aegis_bot.db  docker-compose.yml  main.py  pyproject.toml
app/core/: config.py
app/db/: session.py
app/handlers/: agent_handlers.py  user_handlers.py
app/middlewares/: db_middleware.py
app/models/: models.py
app/services/: agent_service.py  session_service.py
tests/: conftest.py
tests/handlers/: test_agent_handlers.py  test_user_handlers.py
tests/services/: test_agent_service.py  test_session_service.py
